5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1838_1277.log
== TEST (2019-06-23 23:23:38) 
-- CODE:
from numpy import *
tab = array([[0, 2, 11, 6, 15, 11, 1], [2, 0, 7, 12, 4, 2, 15], [11, 7, 0, 11, 8, 3, 13], [6, 12, 11, 0, 10, 2, 1], [15, 4, 8, 10, 0, 5, 13], [11, 2, 3, 2, 5, 0, 14], [1, 15, 13, 1, 13, 14, 0]])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
x = tab[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 23:26:50) 
-- CODE:
from numpy import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
x = tab[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:19:09) 
-- CODE:
from numpy import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
x = tab[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:20:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
x = tab[i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:23:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i,j]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:24:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i,j]
print(xtab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:24:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i,:]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [i,:]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:24:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i, :]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [i, :]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:24:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i, :]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [i, :]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:24:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i, :]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [i, :]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:24:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i, :]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [i, :]
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:25:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i,j]
print(xtab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:28:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i,j]
print(xtab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:28:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [i,:]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [i,:]
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:28:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/111 - 1
xtab = [:,j]
print(xtab)
-- ERROR:
File "XXXX", line 16
    xtab = [:,j]
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:29:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/111 - 1
j = C2/444 - 1
xtab = [i,j]
print(xtab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:29:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
tab = array([
[0, 2, 11, 6, 15, 11, 1], 
[2, 0, 7, 12, 4, 2, 15], 
[11, 7, 0, 11, 8, 3, 13], 
[6, 12, 11, 0, 10, 2, 1], 
[15, 4, 8, 10, 0, 5, 13], 
[11, 2, 3, 2, 5, 0, 14], 
[1, 15, 13, 1, 13, 14, 0]
])
C1 = int(input("Digite o numero da 1a. cidade: "))
C2 = int(input("Digite o numero da 2a. cidade: "))
i = C1/222 - 1
j = C2/111 - 1
xtab = [i,j]
print(xtab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
